popover & basic elements style fix

--- a/src/controls.html
+++ b/src/controls.html
@@ -704,7 +704,7 @@ Value</textarea
                                 ></div>
                             </div>
                         </div>
-                        <!-- Labels (basic - dark) -->
+                        <!-- Labels (basic - accent) -->
                         <div class="form__elements-wrapper">
                             <div class="form__labels">
                                 <!-- Label -->
@@ -728,7 +728,7 @@ Value</textarea
                                     </button>
                                 </div>
                                 <!-- Label dark-->
-                                <div class="form__label-item label">
+                                <div class="form__label-item label label--dark">
                                     <span class="label__text">Label</span>
                                     <button class="label__button">
                                         <svg
@@ -746,9 +746,7 @@ Value</textarea
                                     </button>
                                 </div>
                                 <!-- Label accent-->
-                                <div
-                                    class="form__label-item label label--accent"
-                                >
+                                <div class="form__label-item label">
                                     <span class="label__text">Label</span>
                                     <button class="label__button">
                                         <svg
@@ -1163,7 +1161,7 @@ Value</textarea
                                 </button>
                             </div>
                         </div>
-                        <!-- Alerts (basic - dark)-->
+                        <!-- Alerts (basic - accent)-->
                         <div class="form__elements-wrapper">
                             <div class="form__alerts">
                                 <!-- Alert bright -->
@@ -1191,7 +1189,7 @@ Value</textarea
                                     </button>
                                 </div>
                                 <!-- Alert dark -->
-                                <div class="form__alert-item alert">
+                                <div class="form__alert-item alert alert--dark">
                                     <span class="alert__text"
                                         >A dark alert flash for bright
                                         backgrounds, which never lose the
@@ -1214,7 +1212,7 @@ Value</textarea
                                 </div>
                                 <!-- Alert accent -->
                                 <div
-                                    class="form__alert-item alert alert--accent"
+                                    class="form__alert-item alert"
                                 >
                                     <span class="alert__text"
                                         >A primary alert flash that looks pretty
