--- a/src/elements.html
+++ b/src/elements.html
@@ -167,7 +167,7 @@
                         </div>
                     </div>
                 </section>
-                <!-- Messages (basic - dark bottom left) -->
+                <!-- Messages (basic - blueberry bottom left) -->
                 <section class="messages">
                     <h2 class="section-heading">
                         <span class="section-heading__number">07.</span>
@@ -179,11 +179,11 @@
                             Chat Message
                         </div>
                         <!-- Message dark bottom left -->
-                        <div class="messages__item message">Chat Message</div>
-                        <!-- Message blueberry bottom left -->
-                        <div class="messages__item message message--blueberry">
+                        <div class="messages__item message message--dark">
                             Chat Message
                         </div>
+                        <!-- Message blueberry bottom left -->
+                        <div class="messages__item message">Chat Message</div>
                         <!-- Message strawberry bottom left -->
                         <div class="messages__item message message--strawberry">
                             Chat Message
@@ -198,16 +198,16 @@
                             Chat Message
                         </div>
                         <!-- Message dark bottom right -->
-                        <div class="messages__item message message--br">
-                            Chat Message
-                        </div>
-                        <!-- Message blueberry bottom right -->
                         <div
                             class="
                                 messages__item
-                                message message--blueberry message--br
+                                message message--dark message--br
                             "
                         >
+                            Chat Message
+                        </div>
+                        <!-- Message blueberry bottom right -->
+                        <div class="messages__item message message--br">
                             Chat Message
                         </div>
                         <!-- Message strawberry bottom right -->
@@ -229,16 +229,16 @@
                             Chat Message
                         </div>
                         <!-- Message dark top left -->
-                        <div class="messages__item message message--tl">
-                            Chat Message
-                        </div>
-                        <!-- Message blueberry top left -->
                         <div
                             class="
                                 messages__item
-                                message message--blueberry message--tl
+                                message message--dark message--tl
                             "
                         >
+                            Chat Message
+                        </div>
+                        <!-- Message blueberry top left -->
+                        <div class="messages__item message message--tl">
                             Chat Message
                         </div>
                         <!-- Message strawberry top left -->
@@ -260,16 +260,16 @@
                             Chat Message
                         </div>
                         <!-- Message dark top right -->
-                        <div class="messages__item message message--tr">
-                            Chat Message
-                        </div>
-                        <!-- Message blueberry top right -->
                         <div
                             class="
                                 messages__item
-                                message message--blueberry message--tr
+                                message message--dark message--tr
                             "
                         >
+                            Chat Message
+                        </div>
+                        <!-- Message blueberry top right -->
+                        <div class="messages__item message message--tr">
                             Chat Message
                         </div>
                         <!-- Message strawberry top right -->
@@ -280,6 +280,270 @@
                             "
                         >
                             Chat Message
+                        </div>
+                    </div>
+                </section>
+                <!-- Popovers (basic - top accent ) -->
+                <section class="popovers">
+                    <h2 class="section-heading">
+                        <span class="section-heading__number">08.</span>
+                        Popover
+                    </h2>
+                    <div class="popovers__wrapper section-wrapper">
+                        <!-- Popover top bright -->
+                        <div class="popovers__item popover popover--bright">
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the top popover.
+                            </p>
+                        </div>
+                        <!-- Popover top dark -->
+                        <div class="popovers__item popover popover--dark">
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the top popover.
+                            </p>
+                        </div>
+                        <!-- Popover top accent -->
+                        <div class="popovers__item popover popover">
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the top popover.
+                            </p>
+                        </div>
+                        <!-- Popover top warning -->
+                        <div class="popovers__item popover popover--warning">
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the top popover.
+                            </p>
+                        </div>
+                        <!-- Popover top success -->
+                        <div class="popovers__item popover popover--success">
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the top popover.
+                            </p>
+                        </div>
+                        <!-- Popover top error -->
+                        <div class="popovers__item popover popover--error">
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the top popover.
+                            </p>
+                        </div>
+                        <!-- Popover right bright -->
+                        <div
+                            class="
+                                popovers__item
+                                popover popover--bright popover--right
+                            "
+                        >
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the right popover.
+                            </p>
+                        </div>
+                        <!-- Popover right dark -->
+                        <div
+                            class="
+                                popovers__item
+                                popover popover--dark popover--right
+                            "
+                        >
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the right popover.
+                            </p>
+                        </div>
+                        <!-- Popover right accent -->
+                        <div
+                            class="
+                                popovers__item
+                                popover popover popover--right
+                            "
+                        >
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the right popover.
+                            </p>
+                        </div>
+                        <!-- Popover right warning -->
+                        <div
+                            class="
+                                popovers__item
+                                popover popover--warning popover--right
+                            "
+                        >
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the right popover.
+                            </p>
+                        </div>
+                        <!-- Popover right success -->
+                        <div
+                            class="
+                                popovers__item
+                                popover popover--success popover--right
+                            "
+                        >
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the right popover.
+                            </p>
+                        </div>
+                        <!-- Popover right error -->
+                        <div
+                            class="
+                                popovers__item
+                                popover popover--error popover--right
+                            "
+                        >
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the right popover.
+                            </p>
+                        </div>
+                        <!-- Popover bottom bright -->
+                        <div
+                            class="
+                                popovers__item
+                                popover popover--bright popover--bottom
+                            "
+                        >
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the bottom popover.
+                            </p>
+                        </div>
+                        <!-- Popover bottom dark -->
+                        <div
+                            class="
+                                popovers__item
+                                popover popover--dark popover--bottom
+                            "
+                        >
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the bottom popover.
+                            </p>
+                        </div>
+                        <!-- Popover bottom accent -->
+                        <div
+                            class="
+                                popovers__item
+                                popover popover popover--bottom
+                            "
+                        >
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the bottom popover.
+                            </p>
+                        </div>
+                        <!-- Popover bottom warning -->
+                        <div
+                            class="
+                                popovers__item
+                                popover popover--warning popover--bottom
+                            "
+                        >
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the bottom popover.
+                            </p>
+                        </div>
+                        <!-- Popover bottom success -->
+                        <div
+                            class="
+                                popovers__item
+                                popover popover--success popover--bottom
+                            "
+                        >
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the bottom popover.
+                            </p>
+                        </div>
+                        <!-- Popover bottom error -->
+                        <div
+                            class="
+                                popovers__item
+                                popover popover--error popover--bottom
+                            "
+                        >
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the bottom popover.
+                            </p>
+                        </div>
+                        <!-- Popover left bright -->
+                        <div
+                            class="
+                                popovers__item
+                                popover popover--bright popover--left
+                            "
+                        >
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the left popover.
+                            </p>
+                        </div>
+                        <!-- Popover left dark -->
+                        <div
+                            class="
+                                popovers__item
+                                popover popover--dark popover--left
+                            "
+                        >
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the left popover.
+                            </p>
+                        </div>
+                        <!-- Popover left accent -->
+                        <div
+                            class="popovers__item popover popover popover--left"
+                        >
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the left popover.
+                            </p>
+                        </div>
+                        <!-- Popover left warning -->
+                        <div
+                            class="
+                                popovers__item
+                                popover popover--warning popover--left
+                            "
+                        >
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the left popover.
+                            </p>
+                        </div>
+                        <!-- Popover left success -->
+                        <div
+                            class="
+                                popovers__item
+                                popover popover--success popover--left
+                            "
+                        >
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the left popover.
+                            </p>
+                        </div>
+                        <!-- Popover left error -->
+                        <div
+                            class="
+                                popovers__item
+                                popover popover--error popover--left
+                            "
+                        >
+                            <h3 class="popover__heading">Popover Title</h3>
+                            <p class="popover__text">
+                                Supportive text for the left popover.
+                            </p>
                         </div>
                     </div>
                 </section>
