block arrow mixins update, tooltip

--- a/src/elements.html
+++ b/src/elements.html
@@ -547,6 +547,184 @@
                         </div>
                     </div>
                 </section>
+                <!-- Tooltop (basic - top accent ) -->
+                <section class="tooltips">
+                    <h2 class="section-heading">
+                        <span class="section-heading__number">09.</span>
+                        Tooltop
+                    </h2>
+                    <div class="tooltips__wrapper section-wrapper">
+                        <!-- Tooltop top bright ) -->
+                        <div class="tooltips__item tooltip tooltip--bright">
+                            Tooltip Top
+                        </div>
+                        <!-- Tooltop top dark ) -->
+                        <div class="tooltips__item tooltip tooltip--dark">
+                            Tooltip Top
+                        </div>
+                        <!-- Tooltop top accent ) -->
+                        <div class="tooltips__item tooltip">Tooltip Top</div>
+                        <!-- Tooltop top warning ) -->
+                        <div class="tooltips__item tooltip tooltip--warning">
+                            Tooltip Top
+                        </div>
+                        <!-- Tooltop top success ) -->
+                        <div class="tooltips__item tooltip tooltip--success">
+                            Tooltip Top
+                        </div>
+                        <!-- Tooltop top error ) -->
+                        <div class="tooltips__item tooltip tooltip--error">
+                            Tooltip Top
+                        </div>
+                        <!-- Tooltop right bright ) -->
+                        <div
+                            class="
+                                tooltips__item
+                                tooltip tooltip--bright tooltip--right
+                            "
+                        >
+                            Tooltip Right
+                        </div>
+                        <!-- Tooltop right dark ) -->
+                        <div
+                            class="
+                                tooltips__item
+                                tooltip tooltip--dark tooltip--right
+                            "
+                        >
+                            Tooltip Right
+                        </div>
+                        <!-- Tooltop right accent ) -->
+                        <div class="tooltips__item tooltip tooltip--right">
+                            Tooltip Right
+                        </div>
+                        <!-- Tooltop right warning ) -->
+                        <div
+                            class="
+                                tooltips__item
+                                tooltip tooltip--warning tooltip--right
+                            "
+                        >
+                            Tooltip Right
+                        </div>
+                        <!-- Tooltop right success ) -->
+                        <div
+                            class="
+                                tooltips__item
+                                tooltip tooltip--success tooltip--right
+                            "
+                        >
+                            Tooltip Right
+                        </div>
+                        <!-- Tooltop right error ) -->
+                        <div
+                            class="
+                                tooltips__item
+                                tooltip tooltip--error tooltip--right
+                            "
+                        >
+                            Tooltip Right
+                        </div>
+                        <!-- Tooltop bottom bright ) -->
+                        <div
+                            class="
+                                tooltips__item
+                                tooltip tooltip--bright tooltip--bottom
+                            "
+                        >
+                            Tooltip Bottom
+                        </div>
+                        <!-- Tooltop bottom dark ) -->
+                        <div
+                            class="
+                                tooltips__item
+                                tooltip tooltip--dark tooltip--bottom
+                            "
+                        >
+                            Tooltip Bottom
+                        </div>
+                        <!-- Tooltop bottom accent ) -->
+                        <div class="tooltips__item tooltip tooltip--bottom">
+                            Tooltip Bottom
+                        </div>
+                        <!-- Tooltop bottom warning ) -->
+                        <div
+                            class="
+                                tooltips__item
+                                tooltip tooltip--warning tooltip--bottom
+                            "
+                        >
+                            Tooltip Bottom
+                        </div>
+                        <!-- Tooltop bottom success ) -->
+                        <div
+                            class="
+                                tooltips__item
+                                tooltip tooltip--success tooltip--bottom
+                            "
+                        >
+                            Tooltip Bottom
+                        </div>
+                        <!-- Tooltop bottom error ) -->
+                        <div
+                            class="
+                                tooltips__item
+                                tooltip tooltip--error tooltip--bottom
+                            "
+                        >
+                            Tooltip Bottom
+                        </div>
+                        <!-- Tooltop left bright ) -->
+                        <div
+                            class="
+                                tooltips__item
+                                tooltip tooltip--bright tooltip--left
+                            "
+                        >
+                            Tooltip Left
+                        </div>
+                        <!-- Tooltop left dark ) -->
+                        <div
+                            class="
+                                tooltips__item
+                                tooltip tooltip--dark tooltip--left
+                            "
+                        >
+                            Tooltip Left
+                        </div>
+                        <!-- Tooltop left accent ) -->
+                        <div class="tooltips__item tooltip tooltip--left">
+                            Tooltip Left
+                        </div>
+                        <!-- Tooltop left warning ) -->
+                        <div
+                            class="
+                                tooltips__item
+                                tooltip tooltip--warning tooltip--left
+                            "
+                        >
+                            Tooltip Left
+                        </div>
+                        <!-- Tooltop left success ) -->
+                        <div
+                            class="
+                                tooltips__item
+                                tooltip tooltip--success tooltip--left
+                            "
+                        >
+                            Tooltip Left
+                        </div>
+                        <!-- Tooltop left error ) -->
+                        <div
+                            class="
+                                tooltips__item
+                                tooltip tooltip--error tooltip--left
+                            "
+                        >
+                            Tooltip Left
+                        </div>
+                    </div>
+                </section>
             </div>
         </main>
         <a
