--- a/src/elements.html
+++ b/src/elements.html
@@ -725,6 +725,36 @@
                         </div>
                     </div>
                 </section>
+                <!-- List and Rating -->
+                <section class="tooltips">
+                    <h2 class="section-heading">
+                        <span class="section-heading__number">10.</span>
+                        List and Rating
+                    </h2>
+                    <div class="list-rating__wrapper section-wrapper">
+                        <!-- Lists (basic - bullet) -->
+                        <!-- List check -->
+                        <ul class="list-rating__item list list--check">
+                            <li class="list__item">List item goes here</li>
+                        </ul>
+                        <!-- List cross -->
+                        <ul class="list-rating__item list list--cross">
+                            <li class="list__item">List item goes here</li>
+                        </ul>
+                        <!-- List bullet -->
+                        <ul class="list-rating__item list">
+                            <li class="list__item">List item goes here</li>
+                        </ul>
+                        <!-- List circle -->
+                        <ul class="list-rating__item list list--circle">
+                            <li class="list__item">List item goes here</li>
+                        </ul>
+                        <!-- List square -->
+                        <ul class="list-rating__item list list--square">
+                            <li class="list__item">List item goes here</li>
+                        </ul>
+                    </div>
+                </section>
             </div>
         </main>
         <a
