list with icon on the right side

--- a/src/elements.html
+++ b/src/elements.html
@@ -732,27 +732,50 @@
                         List and Rating
                     </h2>
                     <div class="list-rating__wrapper section-wrapper">
-                        <!-- Lists (basic - bullet) -->
-                        <!-- List check -->
-                        <ul class="list-rating__item list list--check">
-                            <li class="list__item">List item goes here</li>
-                        </ul>
-                        <!-- List cross -->
-                        <ul class="list-rating__item list list--cross">
-                            <li class="list__item">List item goes here</li>
-                        </ul>
-                        <!-- List bullet -->
-                        <ul class="list-rating__item list">
-                            <li class="list__item">List item goes here</li>
-                        </ul>
-                        <!-- List circle -->
-                        <ul class="list-rating__item list list--circle">
-                            <li class="list__item">List item goes here</li>
-                        </ul>
-                        <!-- List square -->
-                        <ul class="list-rating__item list list--square">
-                            <li class="list__item">List item goes here</li>
-                        </ul>
+                        <!-- List with icon on the left side (basic - bullet) -->
+                        <div class="list-rating__column">
+                            <!-- List check -->
+                            <ul class="list-rating__item list list--check">
+                                <li class="list__item">List item goes here</li>
+                            </ul>
+                            <!-- List cross -->
+                            <ul class="list-rating__item list list--cross">
+                                <li class="list__item">List item goes here</li>
+                            </ul>
+                            <!-- List bullet -->
+                            <ul class="list-rating__item list">
+                                <li class="list__item">List item goes here</li>
+                            </ul>
+                            <!-- List circle -->
+                            <ul class="list-rating__item list list--circle">
+                                <li class="list__item">List item goes here</li>
+                            </ul>
+                            <!-- List square -->
+                            <ul class="list-rating__item list list--square">
+                                <li class="list__item">List item goes here</li>
+                            </ul>
+                        </div>
+                        <!-- List with icon on the right side (basic - bullet) -->
+                        <div class="list-rating__column">
+                            <!-- List check -->
+                            <ul
+                                class="
+                                    list-rating__item
+                                    list list--check list--right
+                                "
+                            >
+                                <li class="list__item">List item goes here</li>
+                            </ul>
+                            <!-- List cross -->
+                            <ul
+                                class="
+                                    list-rating__item
+                                    list list--cross list--right
+                                "
+                            >
+                                <li class="list__item">List item goes here</li>
+                            </ul>
+                        </div>
                     </div>
                 </section>
             </div>
